--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node app.js",
     "dev":"nodemon --exec babel-node app.js",
-    "build": "babel ../src -d ../dist",
+    "build": "babel ../src -d",
     "test": "npx mocha --timeout 10000 --exit --compilers js:babel-register --recursive --require babel-polyfill",
     "coverage": "npx nyc mocha --timeout 10000 --exit --compilers js:babel-register --recursive --require babel-polyfill "
   },
