--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node app.js",
     "dev": "nodemon --exec babel-node app.js",
-    "build": "babel ../src -d ../dist",
+    "build": "babel ../src -d ../dist --ignore node_modules",
     "test": "nyc mocha --timeout 10000 --exit --compilers js:babel-register --recursive --require babel-polyfill",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
